# Xin-Yu-College-Student-Mental-Health-Platform

./: .gitignore  APP_FLOW.md  BACKEND_STRUCTURE.md  CODEX.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  New_FRONTEND_GUIDELINES.md  PRD.md  TECH_STACK.md  lessons.md  progress.txt  progress_new.txt  progress_summary.txt  project.config.json  project.private.config.json  pyrightconfig.json  ~$分析（6项补充 答案）.docx  ~$究极需求分析.docx  大创设计报告 .docx
admin/: app.py
backend/: .env.example  alembic.ini  mock_report_response.json  mock_response.json  pyproject.toml  xinyu_local.db
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 49e5c01e7c6c_create_core_account_tables.py  5295854b6475_create_review_and_audit_tables.py  7570a1e0c36e_create_questionnaire_tables.py  84d79874b9ff_create_treehole_tables.py  ad77297002e7_initialize_alembic.py  b4f0f6d5d2a4_add_questionnaire_submission_deleted_at.py
backend/src/: main.py
backend/src/api/: router.py
backend/src/constants/: account_enums.py  demo_constants.py  questionnaire_enums.py  treehole_enums.py  workflow_enums.py
backend/src/core/: auth.py  database.py  security.py  settings.py
backend/src/models/: __init__.py  admin_user.py  ai_analysis_record.py  alert_case.py  assessment_report.py  audit_log.py  base.py  consent_record.py  focus_list_entry.py  intervention_log.py  post_reaction.py  question_bank.py  questionnaire_answer.py  questionnaire_submission.py  questionnaire_template.py  student_user.py  treehole_post.py
backend/src/repositories/: admin_alert_repository.py  admin_analytics_repository.py  (+11 more)
(+236 files in other folders)
