[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12.10"
description = "Xinyu campus mental health platform backend and admin runtime"
dependencies = [
    "alembic==1.18.4",
    "argon2-cffi==25.1.0",
    "fastapi==0.135.3",
    "httpx==0.28.1",
    "pwdlib==0.3.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pymysql==1.1.2",
    "sqlalchemy==2.0.49",
    "streamlit==1.56.0",
    "uvicorn==0.43.0",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "pytest==9.0.2",
    "ruff==0.15.9",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["src"]
